# loprop

./: .gitignore  .gitmodules  .travis.yml  CITATION  MANIFEST.in  README.md  index.html  lop.py  loprop.py  own.py  params.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: pypi-release.yml  pythonapp.yml  pythonpackage.yml
conda-build/: log  meta.yaml
docs/: Makefile  conf.py  index.rst
loprop/: __init__.py  __main__.py  core.py  dalton.py  linalg.py  loprop.py  timing.py  veloxchem.py
loprop/test/: ch4_absorption_data.py  common.py  h2o_beta_data.py  h2o_beta_trans_data.py  h2o_data.py  h2o_dyn_data.py  test_ch4_absorption.py  test_exceptions.py  test_h2o.py  test_h2o_beta.py  test_h2o_beta_trans.py  test_h2o_dyn.py  test_h2o_rot.py  test_misc.py  test_template_writing.py
loprop/test/h2o/: P1  S2  T4
scripts/: loprop
test/: h2o_beta_data.py  h2o_data.py  h2o_dyn_data.py  h2o_rot_data.py  test_bond.py  test_exceptions.py  test_h2o.py  test_h2o_beta.py  test_h2o_rot.py  test_template_writing.py
test/h2o/tmp/: LUINDF  RSPVEC
tests/: ch4_absorption_data.py  common.py  h2o_beta_data.py  h2o_beta_trans_data.py  h2o_data.py  h2o_dyn_data.py  h2o_rot_data.py  hcl_absorption_data.py  pff_data.py  test_bond.py  test_ch4_absorption.py  test_exceptions.py  test_h2o.py  test_h2o_beta.py  test_h2o_beta_trans.py  test_h2o_dyn.py  test_h2o_rot.py  test_hcl_absorption.py  test_misc.py  test_normalizers.py  test_pff.py  test_template_writing.py
tests/h2o/: P2  S1  S1P  S3  T1  T2  T3
(+171 files in other folders)
