[metadata]
name = LoProp
description-file = README.md
version = attr: loprop.__version__
author = Olav Vahtras
author_email = vahtras@kth.se
license = GPLv3
license_file = LICENSE
description = LoProp: localized molecular properties
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vahtras/loprop
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Chemistry

[options]
packages = loprop
python_requires >= 3.6
install_requires =
    blocked-matrix-utils >= 1.0.8

[options.extras_require]
dalton = daltools >= 1.1.4
vlx = h5py

[options.entry_points]
console_scripts =
    loprop = loprop.__main__:main
